testdata/EtaX/EtaX.methF0/EtaX.methF0.02.check
// src:   val t1c: () => Any = methF0 _
// 2.13-base ok
// 2.13-head ok    <no change>
// 2.13-new  ok    <no change>
// 3.0-old   ok    <no change>
// 3.0       ok    <no change>
// 3.1-migr  warn
-- Migration Warning: target/testdata/EtaX/EtaX.methF0.02.scala:9:30 -----------
9 |  val t1c: () => Any = methF0 _
  |                       ^^^^^^^^
  |                       The syntax `<function> _` is no longer supported;
  |                       you can use `(() => <function>())` instead
1 warning found

// 3.1       error
-- Error: target/testdata/EtaX/EtaX.methF0.02.scala:9:30 -----------------------
9 |  val t1c: () => Any = methF0 _
  |                       ^^^^^^^^
  |                       The syntax `<function> _` is no longer supported;
  |                       you can use `(() => <function>())` instead
1 error found


ok    ok    ok    ok    ok    warn  error
